<resources>
    <string name="app_name">GoApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_developer">developer</string>
    <string name="username">Username</string>
    <string name="silahkan_login_untuk_membuka_aplikasi">Silahkan Login untuk membuka Aplikasi</string>
    <string name="password">Password</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="logo">Logo</string>
</resources>