<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView

            android:textAlignment="center"
            android:layout_below="@+id/imgLogo"
            android:id="@+id/tvSilahkan"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan_login_untuk_membuka_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/username"
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:textAlignment="center"
            android:drawableStart="@drawable/ic_username"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSilahkan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/password"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_password"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCreate"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@+id/btnLogin"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </RelativeLayout>

</LinearLayout>